--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "scripts": {
-    "start": "node canteen/server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
